Fix CI: use PYTHON=~ and test Julia latest only
PythonCall 0.9.31 has an InitError on Julia 1.10 during JlWrap
initialization. Match the IGraphs.jl/VNGraphs.jl CI pattern: test on
Julia latest stable only, use PYTHON=~ (null), add thread testing.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,28 +10,30 @@ concurrency:
   cancel-in-progress: ${{ startsWith(github.ref, 'refs/pull/') }}
 
 env:
-  PYTHON: ""
+  PYTHON: ~
 
 jobs:
   test:
-    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
+    name: Julia ${{ matrix.version }} - t=${{ matrix.threads }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         version:
           - '1'
-          - '1.10'
         os:
           - ubuntu-latest
           - windows-latest
           - macos-latest
+        threads:
+          - '2'
         arch:
           - x64
         include:
           - arch: aarch64
             os: macos-latest
             version: '1'
+            threads: '2'
     steps:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
@@ -41,6 +43,8 @@ jobs:
       - uses: julia-actions/cache@v2
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
+        env:
+          JULIA_NUM_THREADS: ${{ matrix.threads }}
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v4
         with:
