--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,9 +39,16 @@ jobs:
           arch: ${{ matrix.arch }}
       - uses: julia-actions/cache@v2
       - uses: julia-actions/julia-buildpkg@v1
+        env:
+          PYTHON: python
+      - name: Resolve CondaPkg environment
+        run: julia --project=. -e 'using CondaPkg; CondaPkg.resolve()'
+        env:
+          JULIA_PYTHONCALL_EXE: "@CondaPkg"
       - uses: julia-actions/julia-runtest@v1
         env:
           JULIA_NUM_THREADS: ${{ matrix.threads }}
+          JULIA_PYTHONCALL_EXE: "@CondaPkg"
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v4
         with:
